Refactor HTTP payload classes
