# src/main/kotlin/com/github/bkhablenko/upday/web/controller/AuthorController.kt
@@ -1,8 +1,8 @@
 package com.github.bkhablenko.upday.web.controller
 
-import com.github.bkhablenko.upday.domain.model.AuthorEntity
 import com.github.bkhablenko.upday.service.AuthorService
-import com.github.bkhablenko.upday.web.model.AuthorItem
+import com.github.bkhablenko.upday.web.model.GetAuthorByIdResponse
+import com.github.bkhablenko.upday.web.model.GetAuthorsResponse
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
 import org.springframework.web.bind.annotation.RequestMapping
@@ -14,14 +14,16 @@ import java.util.UUID
 class AuthorController(private val authorService: AuthorService) {
 
     @GetMapping
-    fun getAuthors(): List<AuthorItem> {
-        return authorService.getAuthors().map { it.toAuthorItem() }
+    fun getAuthors(): GetAuthorsResponse {
+        val authors = authorService.getAuthors()
+
+        return GetAuthorsResponse.of(authors)
     }
 
     @GetMapping("/{authorId}")
-    fun getAuthorById(@PathVariable authorId: UUID): AuthorItem {
-        return authorService.getAuthorById(authorId).toAuthorItem()
-    }
+    fun getAuthorById(@PathVariable authorId: UUID): GetAuthorByIdResponse {
+        val author = authorService.getAuthorById(authorId)
 
-    private fun AuthorEntity.toAuthorItem() = AuthorItem(id, fullName)
+        return GetAuthorByIdResponse.of(author)
+    }
 }
